Add homicides.csv to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -126,6 +126,7 @@ dmypy.json
 
 #not committing original or reduced datasets
 crimes_*.csv
+homicides.csv
 
 #not committing project planning doc
 Project_Planning.md
