--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,36 @@ pandas==1.0.3
 python-dateutil==2.8.1
 pytz==2019.3
 six==1.14.0
+astroid==2.4.2
+backcall==0.2.0
+colorama==0.4.4
+decorator==4.4.2
+findspark==1.4.2
+ipykernel==5.3.4
+ipython==7.19.0
+ipython-genutils==0.2.0
+isort==5.6.4
+jedi==0.17.2
+jupyter-client==6.1.7
+jupyter-core==4.6.3
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+numpy==1.19.4
+pandas==1.1.4
+parso==0.7.1
+pickleshare==0.7.5
+prompt-toolkit==3.0.8
+py4j==0.10.9
+Pygments==2.7.2
+pylint==2.6.0
+pyspark==3.0.1
+python-dateutil==2.8.1
+pytz==2020.4
+pywin32==228
+pyzmq==19.0.2
+six==1.15.0
+toml==0.10.2
+tornado==6.1
+traitlets==5.0.5
+wcwidth==0.2.5
+wrapt==1.12.1
